--- a/src/components/Intro.scss
+++ b/src/components/Intro.scss
@@ -20,7 +20,7 @@
 }
 
 .introSection h1 {
-  font-size: 40px;
+  font-size: 1.5em;
   margin: 0;
 }
 
