--- a/src/components/Projects/Projects.scss
+++ b/src/components/Projects/Projects.scss
@@ -41,11 +41,9 @@ swiper-slide{
 }
 
 swiper-container {
-  position: absolute;
-  left: 0;
-  width: 100%;
-  margin-top: 50px;
-
+ 
+  
+  margin: 0 -50px;
  
 }
 
@@ -66,4 +64,11 @@ swiper-container {
     left: 0;
     border-radius: 15px;
 
+}
+
+@media screen and (max-width:1024px){
+  .project-card{
+    min-height:40vh;
+    
+  }
 }
